<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Player1Window</class>
 <widget class="QDialog" name="Player1Window">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>742</width>
    <height>448</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>742</width>
    <height>448</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>850</width>
    <height>448</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>140</x>
     <y>20</y>
     <width>100</width>
     <height>20</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Terminal</family>
    </font>
   </property>
   <property name="text">
    <string>Your board</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_5">
   <property name="geometry">
    <rect>
     <x>480</x>
     <y>20</y>
     <width>130</width>
     <height>20</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Terminal</family>
    </font>
   </property>
   <property name="text">
    <string>Enemy's board</string>
   </property>
   <property name="textFormat">
    <enum>Qt::AutoText</enum>
   </property>
  </widget>
  <widget class="QPushButton" name="ShootButtonPl_1">
   <property name="geometry">
    <rect>
     <x>590</x>
     <y>330</y>
     <width>121</width>
     <height>81</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="font">
    <font>
     <family>Terminal</family>
    </font>
   </property>
   <property name="cursor">
    <cursorShape>PointingHandCursor</cursorShape>
   </property>
   <property name="text">
    <string>Shoot</string>
   </property>
  </widget>
  <widget class="QWidget" name="">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>50</y>
     <width>341</width>
     <height>251</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="MyBoard" rowstretch="0,0">
    <property name="horizontalSpacing">
     <number>2</number>
    </property>
    <property name="verticalSpacing">
     <number>7</number>
    </property>
    <item row="1" column="4">
     <layout class="QVBoxLayout" name="column5Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="2">
     <layout class="QVBoxLayout" name="column3Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="8">
     <layout class="QVBoxLayout" name="column9Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="6">
     <layout class="QVBoxLayout" name="column7Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="3">
     <layout class="QVBoxLayout" name="column4Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="0">
     <layout class="QVBoxLayout" name="column1Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="7">
     <layout class="QVBoxLayout" name="column8Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="1">
     <layout class="QVBoxLayout" name="column2Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="5">
     <layout class="QVBoxLayout" name="column6Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="1" column="9">
     <layout class="QVBoxLayout" name="column_10Me">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>330</y>
     <width>541</width>
     <height>81</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <widget class="QLabel" name="label">
      <property name="font">
       <font>
        <family>Terminal</family>
        <pointsize>7</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Number of unplaced ship cells left:</string>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="label_3">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
        <property name="sizeIncrement">
         <size>
          <width>0</width>
          <height>0</height>
         </size>
        </property>
        <property name="font">
         <font>
          <family>Terminal</family>
          <pointsize>4</pointsize>
         </font>
        </property>
        <property name="text">
         <string>5</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QPushButton" name="pushButton_11">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>50</horstretch>
        <verstretch>50</verstretch>
       </sizepolicy>
      </property>
      <property name="font">
       <font>
        <family>Terminal</family>
        <pointsize>7</pointsize>
       </font>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="locale">
       <locale language="Ukrainian" country="Ukraine"/>
      </property>
      <property name="text">
       <string>Place ship</string>
      </property>
      <property name="checkable">
       <bool>false</bool>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="">
   <property name="geometry">
    <rect>
     <x>380</x>
     <y>50</y>
     <width>341</width>
     <height>251</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="EnemyBoard">
    <property name="horizontalSpacing">
     <number>2</number>
    </property>
    <item row="0" column="1">
     <layout class="QVBoxLayout" name="column2Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="column1Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="2">
     <layout class="QVBoxLayout" name="column3Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="4">
     <layout class="QVBoxLayout" name="column5Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="5">
     <layout class="QVBoxLayout" name="column6Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="8">
     <layout class="QVBoxLayout" name="column9Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="7">
     <layout class="QVBoxLayout" name="column8Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="6">
     <layout class="QVBoxLayout" name="column7Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="9">
     <layout class="QVBoxLayout" name="column_10Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
    <item row="0" column="3">
     <layout class="QVBoxLayout" name="column4Enemy">
      <property name="spacing">
       <number>2</number>
      </property>
     </layout>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
